27 Jun 2018
add: TVMaze TV Schedule
add: php-bz2 requirement for TVMaze TV Schedule

26 Jun 2018
update: hide video butto in AJAX Chat on small screen
add: notice to run uglify.php when changing classes info

25 Jun 2018
update: limit video size in AJAX Chat
add: video player to AJAX Chat
fix: banner width
add: static and video banners to top of template
update: enable background image on details.php
add: gm.gif and hiya.gif
remove: bans and bannedemail foreign keys
fix: missing initial site statitics data
fix: allowed staff and missing lang reference in backup.php

24 Jun 2018
fix: check for empty pm ids before attempting to delete them
change: anchor tags to id from name for uniformity
fix: incorrect url for announce
update: resetpw.php when importing from U-232 allow compare hintanswer with md5
add: forum_id column to over_forums
remove: unused css links in forums.php
remove: direct link to Pu-239.pw/forums.php
fix: staff forums id
fix: over_forums.php edit forum with same sort number
update: tv.php function_tmdb.php to get tv listing by date, pretty limited set
update: use internal cache flush method
update: limit AJAX Chat images to 50% height 50% width

23 Jun 2018
add: tv.php use TMDb to get a list of tv showings airing today
add: movies.php use TMDb to get a list of movies released any particular week
fix: emoticon size
cleanup: avatar and icon display
fix: forums scroll to post

22 Jun 2018
fix: image proxy when using width/height
add: image proxy in AJAX Chat
fix: almost all formating of usernames is format_username()
remove: preview buttons
fix: AJAX Chat not using override_class
replace: log viewer to allow reading gzipped files and sqlerr_log files

18 Jun 2018
disable: additional newsfeeds
remove: binary_operator_spaces from php_cs_fixer
update: function_imdb.php to handle failure
update: uglify.php to create all needed files, instead of copy example files

17 Jun 2018
remove: unneeded var
update: forums display, still incomplete but much better